# type_adapt_example

./: CMakeLists.txt  package.xml
include/type_adapt_example/: add_diagnostics_node.hpp  add_diagnostics_type_adapter.hpp  change_state_node.hpp  change_state_type_adapter.hpp  empty_node.hpp  empty_type_adapter.hpp  get_state_node.hpp  get_state_type_adapter.hpp  set_bool_node.hpp  set_bool_type_adapter.hpp  state_type_adapter.hpp  string_node.hpp  string_type_adapter.hpp  transition_type_adapter.hpp  trigger_node.hpp  trigger_type_adapter.hpp  typed_string_node.hpp
launch/: string_no_type_adapt.launch.py  string_type_adapt.launch.py
src/: client_node_process.cpp  pub_node_process.cpp  pub_type_adapt_node_process.cpp  server_node_process.cpp  service_client.cpp  service_server.cpp  sub_node_process.cpp  sub_type_adapt_node_process.cpp
